content_section complete

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
     <div class="header">Header</div>
     <div class="navigation">Navigation_menu</div>
+    <div class="body">
+        <div class="content">Content</div>
+        <div class="main_contetn">Main_content</div>
+        <div class="content">Content</div>
+    </div>
 </body>
 </html>
