--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div class="main_contetn">Main_content</div>
         <div class="content">Content</div>
     </div>
+    <div class="footer">footer</div>
 </body>
 </html>
